syntax = "proto3";

package codehorse.mkube.secret;

option go_package = "github.com/solodba/devcloud/mkube/apps/secret";

// 导入外部包
import "common/pb/github.com/solodba/mcube/pb/meta/meta.proto";

// Secret结构体
message Secret {
    // @gotags: bson:",inline" json:"meta"
    codehorse.mcube.meta.Meta Meta = 1;
    // @gotags: bson:",inline" json:"secret"
    CreateSecretRequest Secret = 2;
}

// SecretSet结构体
message SecretSet {
    // @gotags: bson:"total" json:"total"
    int64 Total = 1;
    // @gotags: bson:"items" json:"items"
    repeated SecretSetItem Items = 2;
}

// CreateSecretRequest结构体
message CreateSecretRequest {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 2;
    // @gotags: bson:"type" json:"type"
    string Type = 3;
    // @gotags: bson:"labels" json:"labels"
    repeated ListMapItem Labels = 4;
    // @gotags: bson:"data" json:"data"
    repeated ListMapItem Data = 5;
}

// 通用键值对结构体
message ListMapItem {
    // @gotags: bson:"key" json:"key"
    string Key = 1;
    // @gotags: bson:"value" json:"value"
    string Value = 2;
}

// SecretSetItem结构体
message SecretSetItem {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 2;
    // @gotags: bson:"dataNum" json:"dataNum"
    int64 DataNum = 3;
    // @gotags: bson:"age" json:"age"
    int64 Age = 4;
    // @gotags: bson:"type" json:"type"
    string Type = 5;
    // @gotags: bson:"labels" json:"labels"
    repeated ListMapItem Labels = 6;
    // @gotags: bson:"data" json:"data"
    repeated ListMapItem Data = 7;
}