syntax = "proto3";

package codehorse.mpaas.secret;

option go_package = "github.com/solodba/devcloud/mpaas/apps/secret";

// 导入外部包
import "apps/secret/pb/secret.proto";

// Secret业务接口
service RPC {
    // 创建Secret
    rpc CreateSecret(CreateSecretRequest) returns(Secret);
    // 删除Secret
    rpc DeleteSecret(DeleteSecretRequest) returns(Secret);
    // 修改Secret
    rpc UpdateSecret(UpdateSecretRequest) returns(Secret);
    // 查询Secret
    rpc QuerySecret(QuerySecretRequest) returns(SecretSetItem);
    // 查询Secret详情
    rpc DescribeSecret(DescribeSecretRequest) returns(SecretSet);
}

// DeleteSecretRequest结构体
message DeleteSecretRequest {
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 1;
    // @gotags: bson:"name" json:"name"
    string Name = 2;
}

// UpdateSecretRequest结构体
message UpdateSecretRequest {
    // @gotags: bson:"secret" json:"secret"
    CreateSecretRequest Secret = 1;
}

// QuerySecretRequest结构体
message QuerySecretRequest {
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 1;
    // @gotags: bson:"keyword" json:"keyword"
    string Keyword = 2;
}

// DescribeSecretRequest结构体
message DescribeSecretRequest {
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 1;
    // @gotags: bson:"name" json:"name"
    string Name = 2;
}